Fixed LxInfoWrapper icon not showing in form header (#1061)

--- a/public/styles/lx-forms-grid.css
+++ b/public/styles/lx-forms-grid.css
@@ -53,6 +53,14 @@
   cursor: help;
 }
 
+.lx-form-grid>header>.lx-group .lx-toolbar-chip .lx-info-wrapper .lx-info-wrapper-content {
+  display: flex;
+}
+
+.lx-form-grid>header>.lx-group .lx-toolbar-chip .lx-info-wrapper svg {
+  min-width: var(--icon-size);
+}
+
 .lx-form-grid h2 {
   margin-top: var(--row-size);
   margin-bottom: var(--gap);
